cluster/gitops/monitoring/victoria-metrics/k8s-stack/httproutes.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app_name victoria-metrics-queries
  labels:
    k8s-app: *app_name
spec:
  hostnames:
    - vm-queries.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            path:
              type: ReplaceFullPath
              replaceFullPath: /vmui
    - backendRefs:
        - name: vmselect-victoria-metrics-k8s-stack
          port: 8481
      matches:
        - path:
            type: PathPrefix
            value: /vmui
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app_name victoria-metrics-alerts
  labels:
    k8s-app: *app_name
spec:
  hostnames:
    - vm-alerts.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            path:
              type: ReplaceFullPath
              replaceFullPath: /vmalert
    - backendRefs:
        - name: vmalert-victoria-metrics-k8s-stack
          port: 8481
      matches:
        - path:
            type: PathPrefix
            value: /vmalert
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app_name victoria-metrics-agent
  labels:
    k8s-app: *app_name
spec:
  hostnames:
    - vm-agent.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            path:
              type: ReplaceFullPath
              replaceFullPath: /targets
    - backendRefs: &ref
        - name: vmagent-victoria-metrics-k8s-stack
          port: 8429
      matches:
        - path:
            type: PathPrefix
            value: /targets
    - backendRefs: *ref
      matches:
        - path:
            type: PathPrefix
            value: /service-discovery
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app_name alertmanager
  labels:
    k8s-app: *app_name
spec:
  hostnames:
    - alertmanager.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: vmalertmanager-victoria-metrics-k8s-stack
          port: 9093
